# admin-server/docs/swagger.yaml
@@ -327,7 +327,9 @@ definitions:
         example: 1682366228
         type: integer
       data:
-        $ref: '#/definitions/types.ImportData'
+        allOf:
+        - $ref: '#/definitions/types.ImportData'
+        description: Used internally within the importer
       has_errors:
         example: false
         type: boolean
@@ -358,7 +360,7 @@ definitions:
         example: 224
         type: integer
       rows:
-        description: 'Deprecated: Use Data.Rows instead'
+        description: Used for the final step in the onComplete
         items:
           $ref: '#/definitions/types.ImportRow'
         type: array
@@ -1304,6 +1306,50 @@ paths:
           schema:
             $ref: '#/definitions/types.Res'
       summary: Get import rows
+      tags:
+      - External API
+  /v1/importer:
+    post:
+      description: Create an importer
+      parameters:
+      - description: Request body
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/types.Importer'
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/types.Importer'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/types.Res'
+      summary: Create importer
+      tags:
+      - External API
+  /v1/importer/{id}:
+    delete:
+      description: Delete an importer along with all associated objects (template,
+        columns)
+      parameters:
+      - description: Importer ID
+        in: path
+        name: id
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/types.Res'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/types.Res'
+      summary: Delete importer
       tags:
       - External API
 securityDefinitions:
